--- a/index.html
+++ b/index.html
@@ -15,36 +15,19 @@
 <p>这里是我的网络小站</p>
 <p>2014年 | 2015年</p>
 <p>最近更新：</p>
-<table width="880" border="1" align="center" cellpadding="10" cellspacing="0">
+<table width="880" border="0" align="center" cellpadding="10" cellspacing="0">
     <tr>
         <td>
-            <img src="photo/logo/logo.jpg">
         </td>
         <td>
-            <img src="photo/logo/logo.jpg">
         </td>
         <td>
-            <img src="photo/logo/logo.jpg">
         </td>
         <td>
-            <img src="photo/logo/logo.jpg">
+            <a href="post/1-photostory.htm">
+            <img src="photo/logo/1-photostory-logo.jpg"></a>
         </td>
     </tr>
-    <tr>
-        <td>
-            <img src="photo/logo/logo.jpg">
-        </td>
-        <td>
-            <img src="photo/logo/logo.jpg">
-        </td>
-        <td>
-            <img src="photo/logo/logo.jpg">
-        </td>
-        <td>
-            <img src="photo/logo/logo.jpg">
-        </td>
-    </tr>
-
 </table>
 </div>
 <nav>
