--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <td>
         </td>
         <td>
+             <a href="post/2-photostory.htm">
+            <img src="photo/logo/2-photostory-logo.jpg"></a>
+
         </td>
         <td>
             <a href="post/1-photostory.htm">
