--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <td>
         </td>
         <td>
+             <a href="post/3-photostory.htm">
+            <img src="photo/logo/3-photostory-logo.jpg"></a>
         </td>
         <td>
              <a href="post/2-photostory.htm">
