--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
 <table width="880" border="0" align="center" cellpadding="10" cellspacing="0">
     <tr>
         <td>
+        </td>
+        <td>
+        </td>
+        <td>
+
+        </td>
+        <td>
+            <a href="post/5-photostory.htm">
+            <img src="photo/logo/5-photostory-logo.jpg"></a>
+        </td>
+    </tr>
+    <tr>
+        <td>
             <a href="post/4-photostory.htm">
             <img src="photo/logo/4-photostory-logo.jpg"></a>
         </td>
