--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <td>
         </td>
         <td>
-
+            <a href="post/6-photostory.htm">
+            <img src="photo/logo/6-photostory-logo.jpg"></a>
         </td>
         <td>
             <a href="post/5-photostory.htm">
