--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <td>
         </td>
         <td>
+            <a href="post/7-photostory.htm">
+            <img src="photo/logo/7-photostory-logo.jpg"></a>
         </td>
         <td>
             <a href="post/6-photostory.htm">
