--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <table width="880" border="0" align="center" cellpadding="10" cellspacing="0">
     <tr>
         <td>
+            <a href="post/8-photostory.htm">
+            <img src="photo/logo/8-photostory-logo.jpg"></a>
         </td>
         <td>
             <a href="post/7-photostory.htm">
