--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
            
         </td>
         <td>
-           
+          <a href="post/10-photostory.htm">
+          <img src="photo/logo/10-photostory-logo.jpg"></a> 
         </td>
         <td>
             <a href="post/9-photostory.htm">
