--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
            
         </td>
         <td>
-           
+           <a href="post/11-photostory.htm">
+          <img src="photo/logo/11-photostory-logo.jpg"></a> 
         </td>
         <td>
           <a href="post/10-photostory.htm">
