--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <table width="880" border="0" align="center" cellpadding="10" cellspacing="0">
     <tr>
         <td>
-           
+         <a href="post/12-photostory.htm">
+          <img src="photo/logo/12-photostory-logo.jpg"></a>  
         </td>
         <td>
            <a href="post/11-photostory.htm">
