add 13 and 14 post.

--- a/index.html
+++ b/index.html
@@ -13,21 +13,35 @@
 <div id="container">
 <h2>王子洋</h2>
 <p>这里是我的网络小站</p>
-<p>2014年 | 2015年</p>
+<p>2014年 | <a href="year/2015.htm">2015年</a> | <a href="year/2016.htm">2016年</a></p>
 <p>最近更新：</p>
 <table width="880" border="0" align="center" cellpadding="10" cellspacing="0">
     <tr>
         <td>
-         <a href="post/12-photostory.htm">
-          <img src="photo/logo/12-photostory-logo.jpg"></a>  
+            <a href="post/14-photostory.htm">
+            <img src="photo/logo/14-photostory-logo.jpg"></a>
         </td>
         <td>
-           <a href="post/11-photostory.htm">
-          <img src="photo/logo/11-photostory-logo.jpg"></a> 
+            <a href="post/13-photostory.htm">
+            <img src="photo/logo/13-photostory-logo.jpg"></a>
         </td>
         <td>
-          <a href="post/10-photostory.htm">
-          <img src="photo/logo/10-photostory-logo.jpg"></a> 
+        </td>
+        <td>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <a href="post/12-photostory.htm">
+            <img src="photo/logo/12-photostory-logo.jpg"></a>
+        </td>
+        <td>
+            <a href="post/11-photostory.htm">
+            <img src="photo/logo/11-photostory-logo.jpg"></a>
+        </td>
+        <td>
+            <a href="post/10-photostory.htm">
+            <img src="photo/logo/10-photostory-logo.jpg"></a>
         </td>
         <td>
             <a href="post/9-photostory.htm">
