--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
 <table width="880" border="0" align="center" cellpadding="10" cellspacing="0">
     <tr>
         <td>
+            <a href="post/15-photostory.htm">
+            <img src="photo/logo/15-photostory-logo.jpg"></a>
+        </td>
+
+        <td>
             <a href="post/14-photostory.htm">
             <img src="photo/logo/14-photostory-logo.jpg"></a>
         </td>
         <td>
             <a href="post/13-photostory.htm">
             <img src="photo/logo/13-photostory-logo.jpg"></a>
-        </td>
-        <td>
         </td>
         <td>
         </td>
