--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <img src="photo/logo/13-photostory-logo.jpg"></a>
         </td>
         <td>
+            <a href="post/16-photostory.htm">
+            <img src="photo/logo/16-photostory-logo.jpg"></a>
         </td>
     </tr>
     <tr>
