--- a/year/2016.htm
+++ b/year/2016.htm
@@ -24,6 +24,8 @@
           <img src="../photo/logo/15-photostory-logo.jpg"></a>  
         </td>
         <td>
+          <a href="../post/16-photostory.htm">
+          <img src="../photo/logo/16-photostory-logo.jpg"></a>  
         </td>
         <td>
         </td>
