--- a/year/2016.htm
+++ b/year/2016.htm
@@ -28,6 +28,8 @@
           <img src="../photo/logo/16-photostory-logo.jpg"></a>  
         </td>
         <td>
+            <a href="../post/17-photostory.htm">
+          <img src="../photo/logo/17-photostory-logo.jpg"></a>  
         </td>
     </tr>
 </table>
