--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -27,8 +27,8 @@
             <img src="photo/logo/14-photostory-logo.jpg"></a>
         </td>
         <td>
-            <a href="post/13-photostory.htm">
-            <img src="photo/logo/13-photostory-logo.jpg"></a>
+            <a href="post/18-photostory.htm">
+            <img src="photo/logo/18-photostory-logo.jpg"></a>
         </td>
         <td>
             <a href="post/16-photostory.htm">
