--- a/year/2016.htm
+++ b/year/2016.htm
@@ -32,6 +32,19 @@
           <img src="../photo/logo/17-photostory-logo.jpg"></a>  
         </td>
     </tr>
+    <tr>
+        <td>
+         <a href="../post/18-photostory.htm">
+          <img src="../photo/logo/18-photostory-logo.jpg"></a>  
+        </td>
+        <td>
+        </td>
+        <td>
+        </td>
+        <td>
+        </td>
+    </tr>
+
 </table>
 </div>
 <nav>
