--- a/year/2016.htm
+++ b/year/2016.htm
@@ -38,6 +38,8 @@
           <img src="../photo/logo/18-photostory-logo.jpg"></a>  
         </td>
         <td>
+         <a href="../post/19-photostory.htm">
+          <img src="../photo/logo/19-photostory-logo.jpg"></a> 
         </td>
         <td>
         </td>
