--- a/year/2016.htm
+++ b/year/2016.htm
@@ -41,6 +41,8 @@
          <a href="../post/19-photostory.htm">
           <img src="../photo/logo/19-photostory-logo.jpg"></a> 
         </td>
+         <a href="../post/20-photostory.htm">
+          <img src="../photo/logo/20-photostory-logo.jpg"></a> 
         <td>
         </td>
         <td>
