add yangyang-autumn-outing-2016 photo

--- a/year/2016.htm
+++ b/year/2016.htm
@@ -46,6 +46,8 @@
           <img src="../photo/logo/20-photostory-logo.jpg"></a> 
         </td>
         <td>
+         <a href="../post/21-photostory.htm">
+          <img src="../photo/logo/21-photostory-logo.jpg"></a> 
         </td>
     </tr>
 
