--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <div id="container">
 <h2>王子洋</h2>
 <p>这里是我的网络小站</p>
-<p>2014年 | <a href="year/2015.htm">2015年</a> | <a href="year/2016.htm">2016年</a></p>
-<p>最近更新：</p>
+<p>最近更新 | <a href="year/2015.htm">2015年</a> | <a href="year/2016.htm">2016年</a></p> | <a href="year/2018.htm">2018年</a></p>
 <table width="880" border="0" align="center" cellpadding="10" cellspacing="0">
     <tr>
         <td>
