--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 <div id="container">
 <h2>王子洋</h2>
 <p>这里是我的网络小站</p>
-<p>最近更新 | <a href="year/2015.htm">2015年</a> | <a href="year/2016.htm">2016年</a></p> | <a href="year/2018.htm">2018年</a></p>
+<p>最近更新 | <a href="year/2015.htm">2015年</a> | <a href="year/2016.htm">2016年</a> | <a href="year/2017.htm">2017年</a> | <a href="year/2018.htm">2018年</a></p>
 <table width="880" border="0" align="center" cellpadding="10" cellspacing="0">
     <tr>
+        <td>
+            <a href="post/22-photostory.htm">
+            <img src="photo/logo/22-photostory-logo.jpg"></a>
+        </td>
         <td>
             <a href="post/17-photostory.htm">
             <img src="photo/logo/17-photostory-logo.jpg"></a>
         </td>
-
         <td>
             <a href="post/19-photostory.htm">
             <img src="photo/logo/19-photostory-logo.jpg"></a>
@@ -29,12 +32,12 @@
             <a href="post/18-photostory.htm">
             <img src="photo/logo/18-photostory-logo.jpg"></a>
         </td>
+    </tr>
+    <tr>
         <td>
             <a href="post/16-photostory.htm">
             <img src="photo/logo/16-photostory-logo.jpg"></a>
         </td>
-    </tr>
-    <tr>
         <td>
             <a href="post/15-photostory.htm">
             <img src="photo/logo/15-photostory-logo.jpg"></a>
@@ -47,12 +50,12 @@
             <a href="post/10-photostory.htm">
             <img src="photo/logo/10-photostory-logo.jpg"></a>
         </td>
+    </tr>
+    <tr>
         <td>
             <a href="post/9-photostory.htm">
             <img src="photo/logo/9-photostory-logo.jpg"></a>
         </td>
-    </tr>
-    <tr>
         <td>
             <a href="post/8-photostory.htm">
             <img src="photo/logo/8-photostory-logo.jpg"></a>
@@ -64,10 +67,6 @@
         <td>
             <a href="post/21-photostory.htm">
             <img src="photo/logo/21-photostory-logo.jpg"></a>
-        </td>
-        <td>
-            <a href="post/20-photostory.htm">
-            <img src="photo/logo/20-photostory-logo.jpg"></a>
         </td>
     </tr>
 </table>
