--- a/year/2018.htm
+++ b/year/2018.htm
@@ -16,8 +16,8 @@
 <table width="880" border="0" align="center" cellpadding="10" cellspacing="0">
     <tr>
         <td>
-         <a href="../post/14-photostory.htm">
-          <img src="../photo/logo/14-photostory-logo.jpg"></a>  
+         <a href="../post/#">
+          <img src="../photo/logo/"></a>  
         </td>
         <td>
         </td>
