--- a/year/2017.htm
+++ b/year/2017.htm
@@ -20,6 +20,8 @@
           <img src="../photo/logo/22-photostory-logo.jpg"></a>  
         </td>
         <td>
+         <a href="../post/23-photostory.htm">
+          <img src="../photo/logo/23-photostory-logo.jpg"></a>  
         </td>
         <td>
         </td>
